--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.3.72"
+    ext.android_plugin_version = '2.2.0-alpha4'
+
     repositories {
         google()
         jcenter()
     }
+    ext {
+        compiler_version = '3.1.3'
+    }
     dependencies {
+        classpath "com.android.tools.build:gradle:$compiler_version"
+
         classpath "com.android.tools.build:gradle:4.1.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.4'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
     }
 }
 
