--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".views.MainActivity">
+        <activity android:name=".views.MainActivity"
+            android:theme="@style/Theme.TourappNoBar2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
