--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,12 @@ buildscript {
         jcenter()
     }
     ext {
-        compiler_version = '3.1.3'
+        compiler_version = '4.1.1'
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$compiler_version"
 
-        classpath "com.android.tools.build:gradle:4.1.0"
+        classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.4'
         // NOTE: Do not place your application dependencies here; they belong
