--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,9 @@ dependencies {
 
     implementation "androidx.recyclerview:recyclerview:1.1.0"
 
+    // dependancy sor slider view
+    implementation 'com.github.smarteist:autoimageslider:1.3.9'
+
 }
 
 kapt {
