--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,11 @@ dependencies {
     // dependancy sor slider view
     implementation 'com.github.smarteist:autoimageslider:1.3.9'
 
+    //Google maps services
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
+    //Google location
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 }
 
 kapt {
