--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.tourapp"
-        minSdkVersion 16
+        minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -106,6 +106,9 @@ dependencies {
 
     //Google location
     implementation 'com.google.android.gms:play-services-location:18.0.0'
+
+    //Google places
+    implementation 'com.google.android.libraries.places:places:2.4.0'
 }
 
 kapt {
