Soluciono problema imagebutton del RecyclerCreateListAdapter.kt de  PlaceCreateListFragment.kt
Agrego a RegisterActivity.kt un fragmento intermedio llamado RegisterTagsFragment.kt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,7 @@
             android:theme="@style/Theme.TourappNoBar2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
         </activity>
 
